# Agent-Self

./: .env.example  .gitignore  CLI_README.md  Dockerfile  Procfile  README.md  docker-compose.yml  nixpacks.toml  railway.json  requirements.txt  start.sh
app/: __init__.py  main.py
app/api/routes/: skills.py
app/models/: database.py  models.py
app/sandbox/: scanner.py
app/services/: trust.py
cli/: pyproject.toml
cli/agent_self/: __main__.py  scanner.py
cli/agent_self/commands/: discover.py  info.py  install.py  list_cmd.py  remove.py  scan.py
