[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-self"
version = "0.5.0"
description = "Agent-Self — Agent Skill Manager. Install, discover, and manage SKILL.md skills."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
scripts = { "agent-self" = "agent_self.__main__:main" }

[project.urls]
Homepage = "https://github.com/yuroo-ui/Agent-Self"
